<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuickSit-Host</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="brand">Restaurant Name</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_homepage">homepageActivity</string>
    <string name="category">Category:</string>
    <string name="address">Address</string>
    <string name="setWait">Set Wait</string>
    <string name="waitTime">Approximate Wait</string>
    <string name="plan">Edit Floor Plan</string>
    <string name="res">Reservations</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_register">Register</string>
    <string name="skip">Skip</string>
    <string name="availability">Availability:</string>
    <string name="total">Total:</string>
    <string name="two">2</string>
    <string name="four">4</string>
    <string name="eight">8</string>
    <string name="tables">By Table:</string>

    <string-array name="tables_array">
        <item>Two Person</item>
        <item>Four Person</item>
        <item>Eight Person</item>
    </string-array>

    <string name="request_name">Sam</string>
    <string name="request_size">(3)</string>
    <string name="request_date">5/5/15</string>
    <string name="request_time">4:30</string>

    <string name="time_left">32 min.</string>

    <string name="hello_blank_fragment">Hello Blank Fragment</string>

    <string name="dialog_setwait_header">Set Wait Time</string>
    <string name="wait_num">10</string>
    <string name="wait_min">Minutes</string>

    <string name="nores">No Reservations..</string>

</resources>
