<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/bg_restaurant">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="#FFFFFF"
        android:id="@+id/username"
        android:hint="@string/brand"
        android:editable="true"
        android:textColor="#ffffff"
        android:backgroundTint="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="122dp"
        android:layout_alignParentEnd="true"
        android:outlineProvider="bounds" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="#FFFFFF"
        android:id="@+id/passwordMain"
        android:editable="true"
        android:hint="@string/password"
        android:textColor="#ffffff"
        android:backgroundTint="#ffffff"
        android:layout_alignTop="@+id/username"
        android:layout_marginTop="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/username" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:layout_below="@+id/passwordMain"
        android:background="#CE123E"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/passwordMain" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:id="@+id/skip"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:singleLine="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/title"
        android:textColor="#FFFFFF"
        android:textSize="70dp"
        android:layout_below="@+id/skip"
        android:layout_centerHorizontal="true"
        android:shadowColor="#FFFFFF"
        android:textStyle="bold" />

</RelativeLayout>
