<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="sohagan.com.quicksit_host.homepageActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/waitTime"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textColor="#ff000000"
        android:textColorHighlight="#ff000000"
        android:backgroundTint="#ff000000"
        android:autoText="false"
        android:editable="true"
        android:hint="@string/waitTime" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setWait"
        android:id="@+id/setWait"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/waitTime"
        android:background="#CE123E"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan"
        android:id="@+id/edit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFFFFF"
        android:background="#CE123E"
        android:padding="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/res"
        android:id="@+id/res"
        android:layout_alignBottom="@+id/edit"
        android:layout_alignParentEnd="true"
        android:textColor="#FFFFFF"
        android:background="#CE123E"
        android:padding="10dp" />
</RelativeLayout>
