<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#ffffff"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/request_name"
        android:id="@+id/list_item_name"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:textColor="#000000"
        android:textSize="27dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/request_date"
        android:id="@+id/list_item_type"
        android:layout_below="@+id/list_item_name"
        android:layout_alignLeft="@+id/list_item_name"
        android:layout_alignStart="@+id/list_item_name"
        android:textColor="#000000"
        android:layout_marginBottom="10sp"
        android:textSize="17dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/request_time"
        android:id="@+id/list_item_dist"
        android:textColor="#000000"
        android:layout_alignBottom="@+id/list_item_type"
        android:layout_toEndOf="@+id/list_item_type"
        android:layout_marginLeft="15dp"
        android:textSize="17dp"
        android:layout_marginTop="1dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/request_size"
        android:id="@+id/textView"
        android:layout_above="@+id/list_item_dist"
        android:layout_alignStart="@+id/list_item_dist"
        android:textColor="#000000"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="3dp"
        android:textSize="17dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/time_left"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/list_item_name"
        android:layout_alignParentEnd="true"
        android:textColor="#000000"
        android:layout_marginTop="17dp"
        android:layout_marginRight="10dp"
        android:textSize="17dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clock"
        android:layout_alignTop="@+id/textView"
        android:layout_toStartOf="@+id/textView2"
        android:src="@drawable/clock_small"
        android:layout_alignBottom="@+id/list_item_dist"
        android:layout_marginBottom="5dp" />


</RelativeLayout>