<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cyberplays.sobermonitor.SelectRandomActivity"
    android:id="@+id/select_random"
    android:background="#494949">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/wait_num"
        android:text="@string/wait_num"
        android:textSize="200sp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_marginTop="69dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wait_min"
        android:id="@+id/wait_min"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_below="@+id/wait_num"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/setWait"
        android:id="@+id/wait_butt"
        android:background="#CE123E"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:width="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>

