<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="sohagan.com.quicksit_host.registerActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/brand"
        android:hint="@string/brand"
        android:backgroundTint="#ff000000"
        android:editable="true"
        android:layout_below="@+id/prompt"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/prompt" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/password"
        android:backgroundTint="#ff000000"
        android:editable="true"
        android:layout_below="@+id/brand"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/brand" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/logo_final"
        android:layout_alignParentLeft="false"
        android:layout_alignEnd="@+id/prompt"
        android:layout_above="@+id/prompt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Welcome to QuickSit. Please enter relevant information below to get started."
        android:id="@+id/prompt"
        android:textColor="#ff000000"
        android:singleLine="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="141dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/genre"
        android:layout_marginLeft="100dp"
        android:layout_above="@+id/register"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="43dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/category"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/genre"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textColor="#ff000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register"
        android:layout_alignParentBottom="true"
        android:textColor="#FFFFFF"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/genre"
        android:background="#CE123E" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addressField"
        android:layout_below="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:layout_alignParentStart="true"
        android:backgroundTint="#ff000000"
        android:autoText="false"
        android:editable="true"
        android:hint="@string/address" />

</RelativeLayout>
