<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingRight="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/request_name"
        android:id="@+id/list_item_name1"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:textColor="#000000"
        android:textSize="27dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/request_date"
        android:id="@+id/list_item_date1"
        android:layout_below="@+id/list_item_name1"
        android:layout_alignLeft="@+id/list_item_name1"
        android:layout_alignStart="@+id/list_item_name1"
        android:textColor="#000000"
        android:layout_marginBottom="10sp"
        android:textSize="17dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/request_time"
        android:id="@+id/list_item_time1"
        android:textColor="#000000"
        android:layout_alignBottom="@+id/list_item_date1"
        android:layout_toEndOf="@+id/list_item_date1"
        android:layout_marginLeft="15dp"
        android:textSize="17dp"
        android:layout_marginTop="1dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/request_size"
        android:id="@+id/list_item_size1"
        android:textColor="#000000"
        android:layout_marginLeft="3dp"
        android:textSize="17dp"
        android:layout_marginEnd="16dp"
        android:layout_above="@+id/list_item_time1"
        android:layout_toStartOf="@+id/yes" />

    <Button
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:id="@+id/no"
        android:layout_alignTop="@+id/list_item_name1"
        android:layout_alignParentEnd="true"
        android:background="@color/shittyRoses"
        android:shadowColor="#ffffff"
        android:textColor="#ffffff"
        android:text="N" />

    <Button
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:id="@+id/yes"
        android:layout_alignTop="@+id/no"
        android:layout_toStartOf="@+id/no"
        android:layout_alignBottom="@+id/no"
        android:background="#ff00ff13"
        android:shadowColor="#ffffff"
        android:textColor="#ffffff"
        android:text="Y" />


</RelativeLayout>
